Bug 31833 - Buttons displayed wrongly in Calc
Summary: Buttons displayed wrongly in Calc
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.3
Keywords:
Depends on:
Blocks: 31865
  Show dependency treegraph
 
Reported: 2010-11-22 01:40 UTC by saskuu
Modified: 2011-01-13 03:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
comparing OOO with LO (454.19 KB, application/vnd.oasis.opendocument.text)
2010-11-22 01:41 UTC, saskuu
Details
Screenshot of LibreOffice Calc (272.74 KB, image/png)
2010-11-22 02:22 UTC, Don't use this account, use tml@iki.fi
Details
Screenshot of OOo Calc (527.10 KB, image/png)
2010-11-22 02:23 UTC, Don't use this account, use tml@iki.fi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description saskuu 2010-11-22 01:40:12 UTC
Not correct displaying grouping.
Comment 1 saskuu 2010-11-22 01:41:11 UTC
Created attachment 40473 [details]
comparing OOO with LO
Comment 2 saskuu 2010-11-22 01:45:09 UTC
This bug existing in Beta 3 also
Comment 3 Don't use this account, use tml@iki.fi 2010-11-22 02:22:43 UTC
Created attachment 40474 [details]
Screenshot of LibreOffice Calc

Screenshot from in the initial attachment.
Comment 4 Don't use this account, use tml@iki.fi 2010-11-22 02:23:30 UTC
Created attachment 40475 [details]
Screenshot of OOo Calc

The other screenshot from the initial attachment.
Comment 5 Don't use this account, use tml@iki.fi 2010-11-22 02:27:11 UTC
Changing summary to be more descriptive, could the reporter perhaps make it even more descriptive?

Have you checked if the same happens in Beta 3?

Could you please provide a sample file? You don't need to include any real data if it is confidential, just a few rows of dummy data should be enough, as long as the same problem is visible.

Assigning to Kohei, feel free to bounce back or to somebody else.
Comment 6 Kohei Yoshida 2010-11-22 09:04:34 UTC
Yes, a sample file for this would be great as Tor requested.
Comment 7 saskuu 2010-11-22 22:38:38 UTC
Sample file exist in public: http://www.brain.kr.ua/index.php?id=22&no_cache=1&file=1&uid=
Comment 8 saskuu 2010-11-22 22:40:11 UTC
Please open this file in OOO, LO, MS Excel
Comment 9 Kohei Yoshida 2010-11-24 13:03:43 UTC
Reproduced.  Thanks for the file.

I'll take a look at this for 3.3.
Comment 10 Kohei Yoshida 2010-11-29 13:21:38 UTC
Took me a while to figure this out, but in the end it was because I was using 8-bit integer type variable to store 32-bit integer value during the import of outlines which caused any outlines above 255 to get incorrectly rounded down.

Anyway, this is fixed now, on libreoffice-3-3.

http://cgit.freedesktop.org/libreoffice/calc/commit/?h=libreoffice-3-3&id=42485a770ac22f501b6bf6e94215dd42d267c48f
Comment 11 sophie 2011-01-13 03:49:14 UTC
Verified - Closed - Sophie