Fixed use of incorrect integer type during import of outlines.

I was supposed to use SCSIZE to store column / row position but was
incorrectly using sal_uInt8.  This caused import of outlines from
Excel document to entirely get screwed when the outline positions
were > 255, and it was understandably so. :-P (fdo#31833)